style: 整理代码